@@ -89,7 +89,7 @@
 /* we define _XOPEN_SOURCE to get all the necessary pthread attributes
  * and we need to define it here and not just in GSPThread.h because
  * GLIBC is so picky with defines */
-#if defined __linux__ || defined __hurd__
+#if defined __linux__ || defined __GNU__
 #  ifndef _XOPEN_SOURCE
 #    define _XOPEN_SOURCE 600
 #  endif
